Version 0.6-7 (2015-03-02)

o Removed loddsratio (now in vcd) (rev 252)

Version 0.6-6 (2015-02-04)

o Minor doc changes

Version 0.6-5 (2014-11-07)

o Added Cormorants data (fixed to latest)
o Added LRstats, to replace Summarise. Older summarise() and Summarise() will eventually be deprecated.
o Now Suggests: AER for NMES1988 data
o collapse.table() now works with array objects


Version 0.6-3 (2014-10-27)

o Fixed bug in logLik.loglm when the data contain zero frequencies (rev 228)
o Made Summarise generic, adding a method for "glmlist" objects (rev 230)
o Added a coef() method for "glmlist" objects (thx: John Fox)
o Added a Summarise.loglmlist method (rev 232)
o Replaced all documentation uses of summarise() with Summarise() (rev 233)
o Added cutfac(), a convenience wrapper for cut() (rev 234)
o Now use rgl:: in all mosaic3d functions

Version 0.6-2 (2014-06-30)

o added Summarise, to replace summarise
o Added HairEyePlace data - 4 x 5 x 2, Caithness and Aberdeen hair/eye color (rev 223)
o Added PhdPubs data from Long (1997) - publications by PhD candidates
o Allow Summarise to work with models w/o a deviance() function
o Fixed bug in Summarise wrt degrees of freedom

Version 0.6-1 (2014-04-14)

o Added ICU data
o Added Toxaemia data - multivariate response contingency table (rev 209)
o Added Vietnam data - 2 x 5 x 4 frequency table (rev 210)
o Added logLik.loglm to allow use of AIC() and BIC() for loglm models (rev 212)
o Fixed loddsratio.Rd to work with revised vcd::CoalMiners data  (rev 212)
o Added blogits for bivariate binary response data
o Added Vote1980 data (rev 214)

Version 0.6-0 (2014-03-07)

o Removed Authors: in DESCRIPTION, bumped version

Version 0.5-12 (2013-12-16)

o Added ShakeWords data set- word frequency counts from Shakespeare (rev 188)
o Added Geissler data-- all family sizes for Saxony sex composition data (rev 190)
o Added logseries functions for the logarithmic series distribution (rev 191)