@@ -1,6 +1,9 @@
 Version 0.6-7 (2015-03-02)
 
 o Removed loddsratio (now in vcd) (rev 252)
+o Removed print.Kappa (now in vcd) (rev 253)
+o Fixed bug in CMHtest: rmeans and cmeans labels were reversed (rev 254)
+o Fixed error in Fungicide.Rd, now that we require vcd_1.3-3 (rev 254)
 
 Version 0.6-6 (2015-02-04)
 
